AWS/1-micro-api/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-api
  namespace: production
spec:
  selector:
    matchLabels:
      app: micro-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25% # The max number of newly created pods above my replica number
      maxUnavailable: 25% # The maximum number of pods that could not be available of my replicas number 
  template:
    metadata:
      labels:
        app: micro-api
    spec:
      containers:
      - name: micro-api
        image: ahmadki/micro-api:stable
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "150Mi"
            cpu: "100m"
        ports:
        - name: micro-api
          containerPort: 8000
