AWS/1-micro-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-gateway-ingress
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: micro-gateway-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2' # Default value
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443' # If the connection established by the client is HTTP then it will direct it to HTTPs
    alb.ingress.kubernetes.io/subnets: subnet-02f2bd9cc3edaec07, subnet-030950cfba6dde270
    alb.ingress.kubernetes.io/auth-session-cookie: session
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=app_cookie,stickiness.app_cookie.cookie_name=session,deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
    # the below annotation is for external dns to choose which host to update on route53 
    external-dns.alpha.kubernetes.io/hostname: api.markettest.store
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:014498645803:certificate/d9af5d65-eecf-4a48-a9e4-4997940dcf7e
spec:
  ingressClassName: alb
  # we use defaultbackend if the routes sent to the ingress does not match the path specified in the main backend service
  defaultBackend:
    service:
      name: micro-api
      port:
        number: 8000 
  tls:
  - hosts:
    - "*.markettest.store"
  rules:
  - host: api.markettest.store # Should be mapped to ip, in our case minikube ip
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1"
        backend:
          service:
            name: micro-api
            port: 
              number: 8000
